-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 2.6.0-rc
-
None
Steps to reproduce:
1) Add a application .pro-file to an subdirs project somewhere.
2) set this application up as the current run configuration.
3) Remove the .pro-file again.
Observed outcome:
- Run and debug buttons are disabled. The tool tip is "Failed to parse .pro file"
Expected outcome:
- Better error message that points to what is wrong
- Maybe automatically switch to some RunConfiguration that can actually get started instead of keeping the dysfunctional one.